# btbase

./: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  ProjectHome.md
cmake/Modules/: FindLIBNFC.cmake
src/: libbtbase.c  libbtbase.h
trunk/: CMakeLists.txt  README
trunk/src/: CMakeLists.txt  btbaseutil.c  libbtbase.c  libbtbase.h
trunk/utils/: CMakeLists.txt  btbaseutil.c  test.c
trunk/utils/btbaseutil_qt/: BTBaseUtil.icns  BT_QMainWindow.cpp  BT_QMainWindow.h  BT_QWidget.cpp  CMakeLists.txt  QBEditWidget.cpp  QBEditWidget.h  btbaseutil_qt.cpp  btbaseutil_qt.ui  btlibiface.cpp  btlibiface.h  qbeditwidget.ui
utils/: CMakeLists.txt  test.c
utils/btbaseutil_qt/: BT_QMainWindow.cpp  BT_QMainWindow.h  BT_QWidget.h  CMakeLists.txt  QHexSpinBox.cpp  QHexSpinBox.h  btbaseutil_qt.cpp  btbaseutil_qt.ui  btlibiface.cpp  btlibiface.h
